# ActividadBD2_G12

./: .gitignore  AccesoMySQL.c  AccesoMySQL.h  CMakeLists.txt  build.sh  cliente1.c  readme.md
Actividad_2/: AccesoMySQL.c  bd2_act_2.sql  build.sh  cliente2.c
Actividad_2/Sql/: Estructura.sql  Procedure.sql  Triggers.sql
include/: AccesoMySQL.h
src/: AccesoMySQL.c  cliente1.c  cliente2.c
